feat: :sparkles: Security login and register added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
             <h2>The Bean that didn't Die</h2>
           </div>
           <div>
-            <form class="login-form" action="/frontend/main.html" id="loginForm">
+            <form class="login-form" id="loginForm">
               <input type="email" placeholder="email">
               <input type="password" placeholder="password">
               <input type="submit">
