feat: :sparkles: show cards on page

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -24,9 +24,22 @@
 				<a href="#"><i class='bx bxs-inbox icon' ></i> Queries <i class='bx bx-chevron-right icon-right' ></i></a>
 				<ul class="side-dropdown">
 					<li id = "getAllClients"><a a href="">Get all clients</a></li>
-					<li><a href="/SearchQueris/multiTable.html">multi-table queries</a></li>
-					<li><a href="/SearchQueris/summaryQueries.html">summary queries</a></li>
-				
+					<li id = "getCodeAndCityFromOffices"><a a href="">1. Get code and city from offices</a></li>
+					<li id = "getCityAndNumberByCountry"><a a href="">2. Get city and number by country</a></li>
+					<li id = "getEmployeeInfoByReportsTo"><a a href="">3. Get employee info by reports to</a></li>
+					<li id = "findBossCompany"><a a href="">4. Find boss company</a></li>
+					<li id = "findDifferentByJobTitle"><a a href="">5. Find different by job title</a></li>
+					<li id = "findClientsByCountry"><a a href="">6. Find clients by country</a></li>
+					<li id = "getStates"><a a href="">7. Get order states</a></li>
+					<li id = "findClientWithPaymentInAYear"><a a href="">8. Find client with payment in a year</a></li>
+					<li id = "getOrdersDeliveredAfterExpected"><a a href="">9. Get orders delivered after expected</a></li>
+					<li id = "getOrdersInDelivery"><a a href="">10. Get orders in delivery</a></li>
+					<li id = "getOrdersByStateAndYear"><a a href="">11. Get orders by state and year</a></li>
+					<li id = "getOrdersByStateAndMonth"><a a href="">12. Get orders by state and month</a></li>
+					<li id = "getPaymentsByTypeAndYearOrganized"><a a href="">13. Get payments by type and year</a></li>
+					<li id = "getPaymentMethods"><a a href="">14. Get payment methods</a></li>
+					<li id = "getProductByGamaAndStock"><a a href="">15. Get product by gama and stock</a></li>
+					<li id = "findClientsByCityAndSalesRep"><a a href="">16. Find clients by city and sales rep</a></li>
 				</ul>
 			</li>
 			<li>
@@ -82,7 +95,8 @@
 				<li><a href="#" class="active">About us </a></li>
 			</ul>
             <div class="search">
-				<input type="text" id="searchInput" placeholder="Search clients">
+				<input type="text" id="searchInput" placeholder="Search">
+				<button class ="search-button" id="searchAllById">Search</button>
 			</div>
 			<div class="info-data">
 				
