feat: :sparkles: cilents queries added

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -23,24 +23,26 @@
 			<li>
 				<a href="#"><i class='bx bxs-inbox icon' ></i> Queries about clients <i class='bx bx-chevron-right icon-right' ></i></a>
 				<ul class="side-dropdown">
-					<li id = "getAllClients"><a a href="">Get all clients</a></li>
-					<li id = "getCodeAndCityFromOffices"><a a href="">1. Get code and city from offices</a></li>
-					<li id = "getCityAndNumberByCountry"><a a href="">2. Get city and number by country</a></li>
-					<li id = "getEmployeeInfoByReportsTo"><a a href="">3. Get employee info by reports to</a></li>
-					<li id = "findBossCompany"><a a href="">4. Find boss company</a></li>
-					<li id = "findDifferentByJobTitle"><a a href="">5. Find different by job title</a></li>
-					<li id = "findClientsByCountry"><a a href="">6. Find clients by country</a></li>
-					<li id = "getStates"><a a href="">7. Get order states</a></li>
-					<li id = "findClientWithPaymentInAYear"><a a href="">8. Find client with payment in a year</a></li>
-					<li id = "getOrdersDeliveredAfterExpected"><a a href="">9. Get orders delivered after expected</a></li>
-					<li id = "getOrdersInDelivery"><a a href="">10. Get orders in delivery</a></li>
-					<li id = "getOrdersByStateAndYear"><a a href="">11. Get orders by state and year</a></li>
-					<li id = "getOrdersByStateAndMonth"><a a href="">12. Get orders by state and month</a></li>
-					<li id = "getPaymentsByTypeAndYearOrganized"><a a href="">13. Get payments by type and year</a></li>
-					<li id = "getPaymentMethods"><a a href="">14. Get payment methods</a></li>
-					<li id = "getProductByGamaAndStock"><a a href="">15. Get product by gama and stock</a></li>
-					<li id = "findClientsByCityAndSalesRep"><a a href="">16. Find clients by city and sales rep</a></li>
-				</ul>
+					<li id="getAllClients"><a href="">Get all clients</a></li>
+					<li id="findClientsByCountry"><a href="">Find clients by country</a></li>
+					<li id="findClientsWithPaymentInAYear"><a href="">Find clients with payment in a year</a></li>
+					<li id="findClientsByCityAndSalesRep"><a href="">Find clients by city and sales rep</a></li>
+					<li id="findAllClientsWithSalesReps"><a href="">Find all clients with sales reps</a></li>
+					<li id="findAllClientsWithSalesRepIfPayment"><a href="">Find all clients with sales rep if payment</a></li>
+					<li id="findAllClientsWithSalesRepWithoutPayment"><a href="">Find all clients with sales rep without payment</a></li>
+					<li id="findAllClientsWithSalesRepAndOfficeIfPayment"><a href="">Find all clients with sales rep and office if payment</a></li>
+					<li id="findAllClientsWithSalesRepAndOfficeWithoutPayment"><a href="">Find all clients with sales rep and office without payment</a></li>
+					<li id="findAllClientsWithSalesRepAndOffice"><a href="">Find all clients with sales rep and office</a></li>
+					<li id="findClientsWithPendingOrdersLaterThanExpected"><a href="">Find clients with pending orders later than expected</a></li>
+					<li id="findClientsWithoutPayment"><a href="">Find clients without payment</a></li>
+					<li id="findClientsWithoutOrder"><a href="">Find clients without order</a></li>
+					<li id="findClientsWithoutOrderOrWithoutPayment"><a href="">Find clients without order or without payment</a></li>
+					<li id="countByCountry"><a href="">Count by country</a></li>
+					<li id="count"><a href="">Count all clients</a></li>
+					<li id="countInMadrid"><a href="">Count in Madrid</a></li>
+					<li id="countCitiesStartingWithM"><a href="">Count cities starting with M</a></li>
+					<li id="withoutSalesRepresentative"><a href="">Without sales representative</a></li>
+				</ul>				
 			</li>
 
 		</ul>
