feat: :sparkles: All clients implemented in frontend

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -44,6 +44,30 @@
 					<li id="withoutSalesRepresentative"><a href="">Without sales representative</a></li>
 				</ul>				
 			</li>
+			<li>
+				<a href="#"><i class='bx bxs-inbox icon' ></i> Queries about employees <i class='bx bx-chevron-right icon-right' ></i></a>
+				<ul class="side-dropdown">
+					<li id="getAllClients"><a href="">Get all clients</a></li>
+					<li id="findClientsByCountry"><a href="">Find clients by country</a></li>
+					<li id="findClientsWithPaymentInAYear"><a href="">Find clients with payment in a year</a></li>
+					<li id="findClientsByCityAndSalesRep"><a href="">Find clients by city and sales rep</a></li>
+					<li id="findAllClientsWithSalesReps"><a href="">Find all clients with sales reps</a></li>
+					<li id="findAllClientsWithSalesRepIfPayment"><a href="">Find all clients with sales rep if payment</a></li>
+					<li id="findAllClientsWithSalesRepWithoutPayment"><a href="">Find all clients with sales rep without payment</a></li>
+					<li id="findAllClientsWithSalesRepAndOfficeIfPayment"><a href="">Find all clients with sales rep and office if payment</a></li>
+					<li id="findAllClientsWithSalesRepAndOfficeWithoutPayment"><a href="">Find all clients with sales rep and office without payment</a></li>
+					<li id="findAllClientsWithSalesRepAndOffice"><a href="">Find all clients with sales rep and office</a></li>
+					<li id="findClientsWithPendingOrdersLaterThanExpected"><a href="">Find clients with pending orders later than expected</a></li>
+					<li id="findClientsWithoutPayment"><a href="">Find clients without payment</a></li>
+					<li id="findClientsWithoutOrder"><a href="">Find clients without order</a></li>
+					<li id="findClientsWithoutOrderOrWithoutPayment"><a href="">Find clients without order or without payment</a></li>
+					<li id="countByCountry"><a href="">Count by country</a></li>
+					<li id="count"><a href="">Count all clients</a></li>
+					<li id="countInMadrid"><a href="">Count in Madrid</a></li>
+					<li id="countCitiesStartingWithM"><a href="">Count cities starting with M</a></li>
+					<li id="withoutSalesRepresentative"><a href="">Without sales representative</a></li>
+				</ul>				
+			</li>
 
 		</ul>
 	</section>
@@ -64,7 +88,7 @@
 				<ul class="profile-link">
 					<li><a href="#"><i class='bx bxs-user-circle icon' ></i> Profile</a></li>
 					<li><a href="#"><i class='bx bxs-cog' ></i> Settings</a></li>
-					<li><a href="/index.html"><i class='bx bxs-log-out-circle' ></i> Logout</a></li>
+					<li id ="logout"><a href="#"><i class='bx bxs-log-out-circle' ></i> Logout</a></li>
 				</ul>
 			</div>
 		</nav>
